# huniq

./: .gitmodules  .rustfmt.toml  Cargo.toml  benchmark.sh  benchmark_results.txt  build.rs  flake.nix  readme.md  test.sh
.github/workflows/: main.yml
src/: main.rs  uniq_iter.rs  xxhash.rs  xxhash_bindings.h  xxhash_bindings.rs
test/: expect_count.txt  expect_uniq.txt  input.txt
tests/: tests.rs
