[package]
name = "huniq"
version = "2.5.0"
authors = ["Karolin Varner <karo@cupdev.net>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Filter out duplicates on the command line. Replacement for `sort | uniq` optimized for speed (10x faster)."
readme = "readme.md"
repository = "https://github.com/koraa/huniq"
categories = ["command-line-utilities"]
keywords = ["cli", "uniq"]

[dependencies]
clap = "2.33.3"
anyhow = "1.0.33"
ahash = "0.5.6"
bstr = "0.2.14"

[dev-dependencies]
assert_cmd = "1.0.1"

[profile.release]
lto = "fat"
