[package]
name = "huniq"
version = "2.6.0"
authors = ["Karolin Varner <karo@cupdev.net>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Filter out duplicates on the command line. Replacement for `sort | uniq` optimized for speed (10x faster)."
readme = "readme.md"
repository = "https://github.com/koraa/huniq"
categories = ["command-line-utilities"]
keywords = ["cli", "uniq"]

[dependencies]
clap = "3.1.9"
anyhow = "1.0.56"
ahash = "0.7.6"
bstr = "0.2.17"

[dev-dependencies]
assert_cmd = "2.0.4"

[profile.release]
lto = "fat"
