[package]
name = "huniq"
version = "2.7.0"
authors = ["Karolin Varner <karo@cupdev.net>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Filter out duplicates on the command line. Replacement for `sort | uniq` optimized for speed (10x faster)."
readme = "readme.md"
repository = "https://github.com/koraa/huniq"
categories = ["command-line-utilities"]
keywords = ["cli", "uniq"]

[dependencies]
clap = {version = "3.1.9", features = ["derive"]}
anyhow = "1.0.56"
ahash = "0.7.6"
bstr = "0.2.17"

[dev-dependencies]
assert_cmd = "2.0.4"

[profile.release]
lto = "fat"
